# sparkling-water

./: .gitignore  .scalafmt.conf  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  DEVEL.md  DEVEL.rst  Jenkinsfile  Jenkinsfile-external  Jenkinsfile-internal  Jenkinsfile.groovy  Makefile  README.md  README.rst  Sparkling_Water_Presentation.key  TensorFlowDeepLearning.ipynb  build.gradle  conf.py  content.list  deep_learning_prostate.mojo  f.txt  gradle-spark2.1.properties  gradle-spark2.2.properties  gradle-spark2.3.properties  gradle-spark2.4.properties  gradle-spark3.0.properties  gradle-spark3.1.properties  gradle-spark3.2.properties  gradle-spark3.3.properties  gradle-spark3.4.properties  gradle-spark3.5.properties  gradle.properties  greclipse.properties  index.rst  make-dist.sh  make-distrib.sh  make.bat  prostate_NA.orc  release_py.sh  rsakey.pem  (+6 more)
py-scoring/src/: MANIFEST.in  pyproject.toml  setup.py
py-scoring/src/ai/h2o/sparkling/: BackingJar.py  H2ODataFrameConverters.py  Initializer.py  VersionComponents.py  __init__.py
py-scoring/src/ai/h2o/sparkling/ml/: __init__.py
py-scoring/src/ai/h2o/sparkling/ml/metrics/: H2OBinomialMetrics.py  H2OMultinomialMetrics.py  H2ORegressionMetrics.py
py-scoring/src/ai/h2o/sparkling/ml/models/: H2OAlgorithmMOJOModelBase.py  H2OAutoEncoderMOJOBase.py  H2OBinaryModel.py  H2ODimReductionMOJOModel.py  H2OGLRMMOJOBase.py  H2OMOJOModelBase.py  H2OMOJOPipelineModel.py  H2OMOJOSettings.py  H2OTargetEncoderMOJOModel.py  H2OTargetEncoderModel.py  H2OWord2VecMOJOBase.py  __init__.py
py-scoring/src/ai/h2o/sparkling/ml/params/: H2OAlgorithmCommonParams.py  H2OAlgorithmMOJOParams.py  H2OAutoEncoderExtraParams.py  H2OAutoEncoderExtraParamsOnMOJO.py  H2OAutoMLParams.py  H2OBaseMOJOParams.py  H2OCommonParams.py  H2ODimReductionExtraParams.py  H2ODimReductionExtraParamsOnMOJO.py  H2OGLRMExtraParams.py  (+43 more)
py-scoring/src/pysparkling/: __init__.py
py-scoring/src/pysparkling/ml/: __init__.py
py-scoring/src/pysparkling/ml/metrics/: __init__.py
py-scoring/src/pysparkling/ml/models/: __init__.py
py/src/: pyproject.toml  setup.cfg  setup.py
py/src/ai/h2o/sparkling/: BackingJar.py  ExternalBackendConf.py  FrameConversions.py  H2OConf.py  H2OContext.py  Initializer.py  InternalBackendConf.py  SharedBackendConf.py  SharedBackendConfUtils.py  VersionComponents.py  __init__.py
py/src/ai/h2o/sparkling/ml/: H2OStageBase.py  Utils.py  __init__.py
py/src/pysparkling/: __init__.py
py/src/pysparkling/conf/: __init__.py
py/src/pysparkling/context/: __init__.py
py/src/pysparkling/initializer/: __init__.py
py/src/pysparkling/ml/: __init__.py
py/src/pysparkling/ml/algos/: __init__.py
py/src/pysparkling/ml/algos/classification/: __init__.py
py/src/pysparkling/ml/algos/regression/: __init__.py
py/src/pysparkling/ml/features/: __init__.py
py/src/pysparkling/ml/metrics/: __init__.py
py/src/pysparkling/ml/models/: __init__.py
(+2890 files in other folders)
